fix: unwrap gallery module

--- a/packages/gatsby-theme-basic/src/components/modularity-modules/GalleryModule.module.css
+++ b/packages/gatsby-theme-basic/src/components/modularity-modules/GalleryModule.module.css
@@ -1,18 +1,9 @@
 .component {
-  /* width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw; */
-}
-
-.imageWrapper {
   width: 100%;
   height: 100%;
 }
 
-.carouselWrapper {
+.inner {
   position: relative;
 }
 
